--- a/OPC-UA-server/requirements.txt
+++ b/OPC-UA-server/requirements.txt
@@ -1,1 +1,21 @@
-asyncua
+aiofiles==0.5.0
+aiosqlite==0.12.0
+asyncua==0.8.2
+attrs==19.3.0
+cffi==1.14.0
+cryptography==2.9
+importlib-metadata==1.5.0
+lxml==4.5.0
+more-itertools==8.2.0
+packaging==20.3
+pluggy==0.13.1
+py==1.8.1
+pycparser==2.20
+pyparsing==2.4.6
+pytest==5.4.1
+pytest-mock==2.0.0
+python-dateutil==2.8.1
+pytz==2019.3
+six==1.14.0
+wcwidth==0.1.8
+zipp==3.1.0
