--- a/OPC-UA-server/Dockerfile
+++ b/OPC-UA-server/Dockerfile
@@ -2,9 +2,11 @@ FROM python:3.7.6
 
 WORKDIR /usr/app
 
-ADD ./plant_simulation ./
+ADD ./plant_simulation ./plant_simulation
 ADD ./opc-ua-server.py ./
 ADD ./requirements.txt ./
 RUN python -m pip install -r requirements.txt
+
+EXPOSE 4840
 
 CMD ["python", "opc-ua-server.py"]
