--- a/OPC-UA-client/Dockerfile
+++ b/OPC-UA-client/Dockerfile
@@ -2,9 +2,8 @@ FROM python:3.7.6
 
 WORKDIR /usr/app
 
-ADD ./plant_simulation ./plant_simulation
-ADD ./opc-ua-server.py ./
 ADD ./requirements.txt ./
 RUN python -m pip install -r requirements.txt
+ADD ./opc-ua-client.py ./
 
-CMD ["python", "opc-ua-server.py"]
+CMD ["python", "opc-ua-client.py"]
