refactor OPC-UA-Client Docker file

--- a/OPC-UA-client/Dockerfile
+++ b/OPC-UA-client/Dockerfile
@@ -4,6 +4,7 @@ WORKDIR /usr/app
 
 ADD ./requirements.txt ./
 RUN python -m pip install -r requirements.txt
+ADD ./KafkaProducer ./KafkaProducer
 ADD ./opc-ua-client.py ./
 
 CMD ["python", "opc-ua-client.py"]
