--- a/OPC-UA-client/Dockerfile
+++ b/OPC-UA-client/Dockerfile
@@ -2,6 +2,7 @@ FROM python:3.7.6
 
 WORKDIR /usr/app
 
+RUN python -m pip install --upgrade pip
 ADD ./requirements.txt ./
 RUN python -m pip install -r requirements.txt
 ADD ./KafkaProducer ./KafkaProducer
